<resources>
    <string name="app_name">Appli2sDv</string>
    <string name="title_activity_nd_appli2">ND_appli2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Friends Packets</string>
    <string name="menu_gallery">My Packets</string>
    <string name="menu_slideshow"> My History</string>
    <string name="menu_tools">Sign out</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
