<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appli2sdv.ui.Friends_Packets.Friends_Packets_Fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_friends_packets" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appli2sdv.ui.User_Packets.User_PacketsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_user_packet" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appli2sdv.ui.User_History_delivering.User_History_deliveringFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_history_delivering" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.appli2sdv.ui.Sign_out.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.appli2sdv.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.appli2sdv.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>